[package]
name = "libcore"
version = "0.1.0"
authors = ["Sojan James <sojan.james@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.24"
libc = "0.2.92"
async-trait = "0.1.45"
nix = "0.16.0"
tracing = "0.1"
netlink-sys = "0.7.0"
walkdir = "2"
pal = { path = "pal"}
sabaton-hal = { git = "https://github.com/sabaton-rs/sabaton-hal.git"}
log = "0.4.14"
